--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ android:
         - extra-google-m2repository 
         - extra-android-m2repository
         - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
+        - compile 'com.google.android.gms:play-services:9.6.1'
+        - compile 'com.android.support:support-annotations:24.2.1'
+        - compile 'com.google.firebase:firebase-core:9.4.0'
+        - compile 'com.google.android.gms:play-services-auth:9.6.1'
 
     licenses:
         - 'android-sdk-preview-license-52d11cd2'
@@ -31,4 +35,4 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: ./gradlew 
+script: ./gradlew build
