--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,3 +28,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
