--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,40 @@
 language: android
-jdk: oraclejdk8
-sudo: require
-env:
-  global:
-    - ANDROID_TARGET=android-22
-    - ANDROID_ABI=armeabi-v7a
+# jdk: oraclejdk8
+# sudo: require
+# env:
+#   global:
+#     - ANDROID_TARGET=android-22
+#     - ANDROID_ABI=armeabi-v7a
 
 android:
     components:
 
-        - tools
-        - tools
+        # - tools
+        # - tools
         - platform-tools
         - build-tools-25.0.2
         - android-25
-        - android-24
-        - android-23
-        - android-22
-        - extra-google-m2repository 
+        # - android-24
+        # - android-23
+        # - android-22
+        # - extra-google-m2repository 
         - extra-android-m2repository
-        - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
-        - compile 'com.google.android.gms:play-services:9.6.1'
-        - compile 'com.android.support:support-annotations:24.2.1'
-        - compile 'com.google.firebase:firebase-core:9.4.0'
-        - compile 'com.google.android.gms:play-services-auth:9.6.1'
+    #     - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
+    #     - compile 'com.google.android.gms:play-services:9.6.1'
+    #     - compile 'com.android.support:support-annotations:24.2.1'
+    #     - compile 'com.google.firebase:firebase-core:9.4.0'
+    #     - compile 'com.google.android.gms:play-services-auth:9.6.1'
 
-    licenses:
-        - 'android-sdk-preview-license-52d11cd2'
-        - 'android-sdk-license-.+'
-        - 'google-gdk-license-.+'
+    # licenses:
+    #     - 'android-sdk-preview-license-52d11cd2'
+    #     - 'android-sdk-license-.+'
+    #     - 'google-gdk-license-.+'
 
 before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+    - chmod +x gradlew
+  # - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  # - emulator -avd test -no-audio -no-window &
+  # - android-wait-for-emulator
+  # - adb shell input keyevent 82 &
 
-script: ./gradlew build connectedCheck
+script: ./gradlew build
