--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,15 @@
 language: android
-jdk: oraclejdk8
-sudo: require
-env:
-  global:
-    - ANDROID_TARGET=android-22
-    - ANDROID_ABI=armeabi-v7a
-
 android:
-    components:
-
-        - tools
-        - tools
-        - platform-tools
-        - build-tools-25.0.2
-        - android-25
-        - android-24
-        - android-23
-        - android-22
-        - extra-google-m2repository 
-        - extra-android-m2repository
-        - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
-        - compile 'com.google.android.gms:play-services:9.6.1'
-        - compile 'com.android.support:support-annotations:24.2.1'
-        - compile 'com.google.firebase:firebase-core:9.4.0'
-        - compile 'com.google.android.gms:play-services-auth:9.6.1'
-
-    licenses:
-        - 'android-sdk-preview-license-52d11cd2'
-        - 'android-sdk-license-.+'
-        - 'google-gdk-license-.+'
-
-before_script:
-    - chmod +x gradlew
-  # - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-  # - emulator -avd test -no-audio -no-window &
-  # - android-wait-for-emulator
-  # - adb shell input keyevent 82 &
-
-script: ./gradlew build
+  components:
+    - tools
+    - platform-tools
+    - build-tools-25.0.2
+    - android-25
+    - extra-android-m2repository
+    - extra-google-m2repository
+    - extra-android-support
+    - extra-google-google_play_services
+jdk:
+  - oraclejdk8
+script:
+  - ./gradlew test
